# HiggsDNA

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  environment.yml  localNano2023D.json  noPreselAnalysis.json  pyproject.toml  run_analysis.py  setup.cfg  setup.py
docker/: Dockerfile_lxplus  install.sh
docs/: environment.yml
docs/source/: concepts.rst  conf.py  dask.rst  developers.rst  examples.rst  index.rst  installation.rst  jobs.rst  output_grooming.rst
docs/source/modules/: higgs_dna.metaconditions.corrections.rst  (+14 more)
higgs_dna/: constants.py
higgs_dna/metaconditions/: Era2017_RR-31Mar2018_v1.json  Era2017_legacy_v1.json  Era2017_legacy_xgb_v1.json  Era2018_legacy_v1.json  Era2018_legacy_xgb_v1.json  Era2022_v1.json  __init__.py  cross_sections.json
higgs_dna/samples/: fetch.py
higgs_dna/selections/: HHbbgg_selections.py  jet_selections.py  lepton_selections.py  lepton_selections_Zmmy.py  lumi_selections.py  object_selections.py  photon_selections.py  photon_selections_Run2.py
higgs_dna/submission/: lxplus.py
higgs_dna/systematics/: __init__.py  event_weight_systematics.py  jet_systematics.py  jet_systematics_json.py  lepton_systematics.py  photon_systematics.py  systematic.py  systematics_producer.py  utils.py
higgs_dna/tools/: EELeak_region.py  SC_eta.py  chained_quantile.py  decorrelator.py  diphoton_mva.py  flow_corrections.py  gen_helpers.py  mass_decorrelator.py  photonid_mva.py  pileup_reweighting.py  truth_info.py  xgb_loader.py
higgs_dna/utils/: awkward_utils.py  dumping_utils.py  logger_utils.py  misc_utils.py  runner_utils.py
higgs_dna/workflows/: HHbbgg.py  Zmmy.py  __init__.py  base.py  dystudies.py  particleLevel.py  top.py
notebooks/: basics.ipynb
scripts/: categorisation.py  convert_parquet_to_root.py  make_correction_json.py  merge_parquet.py  prepare_output_file.py  pull_correction_files.py  pull_files.py  run_analysis.py  runner.py
scripts/fiducial/: fiducial_xsec_calculator.py
scripts/postprocessing/: convert_parquet_to_root.py  merge_parquet.py  prepare_output_file.py
scripts/script/: Output_management_tutorial.md  merge_parquet.py  prepare_output_file.py  pull_files.py
tests/: test_package.py  test_parquet_scripts.py  test_photonid_mva.py  test_samples.py  test_selections.py  test_utils.py  test_workflows.py
(+64 files in other folders)
