[metadata]
name = higgs_dna

[options]
packages = find:
install_requires =
    coffea>=0.7.6
    vector
    xgboost
    pyaml
    rich
    dask
    distributed
    dask-jobqueue
python_requires = >=3.6
include_package_data = True
scripts =
    scripts/runner.py

[options.extras_require]
dev =
    pytest>=6
test =
    pytest>=6