[metadata]
name = higgs_dna
description = Tools for running the CMS Higgs to Two Photons Analysis on NanoAOD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.cern.ch/HiggsDNA-project/HiggsDNA
author = Hgg Group
author_email = higgsdna@cern.ch
maintainer = Hgg Group
maintainer_email = higgsdna@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://higgs_dna.readthedocs.io/
    Bug Tracker = https://gitlab.cern.ch/HiggsDNA-project/HiggsDNA/issues
    Discussions = https://gitlab.cern.ch/HiggsDNA-project/HiggsDNA/discussions
    Changelog = https://gitlab.cern.ch/HiggsDNA-project/HiggsDNA/releases

[options]
packages = find:
install_requires =
    coffea>=0.7.6
    vector
    xgboost<=1.5.1
    pyaml
    rich
    dask
    distributed
    dask-jobqueue
python_requires = >=3.6
include_package_data = True
scripts =
    scripts/run_analysis.py
    higgs_dna/samples/fetch.py

[options.extras_require]
dev =
    pytest>=6
    pip==21
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
test =
    pytest>=6

[flake8]
# To be removed after the whole systematics buisiness: E266, E712
extend-ignore = E203, E231, E501, E722, W503, B950, E266, E712
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
    noxfile.py: T
